--- a/css/a.css
+++ b/css/a.css
@@ -21,22 +21,29 @@
 	font-size: 14px;
 	font-family: Georgia, 'Kozuka Mincho Pr6N', 'Hiragino Mincho Pro', serif;
 	line-height: 1.7;
-	max-width: 1200px;
+	max-width: 960px;
 	margin: 0 auto;
 	padding: 50px 110px;
-	-webkit-animation: wrap 1.5s ease;
-	-moz-animation: wrap 1.5s ease;
-	animation: wrap 1.5s ease;
+	-webkit-animation: wrap 1.2s ease;
+	-moz-animation: wrap 1.2s ease;
+	animation: wrap 1.2s ease;
+	image-rendering: optimizeQuality;
 }
 
 a {
 	color: #000;
 /*	color: #fff;*/
+	-webkit-transition: color .8s ease, background .8s ease, opacity .8s ease;
+	-moz-transition: color .8s ease, background .8s ease, opacity .8s ease;
+	transition: color .8s ease, background .8s ease, opacity .8s ease;
 }
 	a:hover, .pl li a:hover {
 		color: #000;
 		border-bottom: 1px dotted rgba(0, 0, 0, .3);
-		background: rgba(255, 255, 0, .9);
+		background: rgba(255, 255, 0, .95);
+		-webkit-transition: none;
+		-moz-transition: none;
+		transition: none;
 	}
 
 ins {
@@ -48,7 +55,7 @@ del {
 }
 
 header, nav, hgroup, article, aside, footer {
-	padding-bottom: 40px;
+	padding-bottom: 50px;
 }
 
 h1 {
@@ -70,6 +77,7 @@ h1 {
 		height: 30px;
 		border-radius: 2000px;
 		border: 6px #000 solid;
+		z-index: -100;
 	}
 
 h2, h2 a, footer, footer a,
@@ -83,11 +91,14 @@ nav:nth-of-type(2) {
 }
 
 h2, footer {
-	-webkit-animation: txt 2s 1 ease;
-	-moz-animation: txt 2s 1 ease;
-	animation: txt 2s 1 ease;
+	-webkit-animation: txt 1.5s 1 ease;
+	-moz-animation: txt 1.5s 1 ease;
+	animation: txt 1.5s 1 ease;
 }
 
+article {
+	font-size: 16px;
+}
 
 article h3 {
 /*	only h3, please */
@@ -129,19 +140,24 @@ article abbr:after {
 }
 
 article code, article pre {
-	color: #69c;
+	font-family: Menlo, Consolas, monospace;
+	color: #b74;
 }
 
 article .txt {
 	max-width: 600px;
 }
 
+article .note, article .download {
+	padding: 1em 2em;
+}
+
 article .note {
-	background: rgba(255, 0, 0, .08);
+	background: rgba(255, 255, 0, .1);
 }
 
 article .download {
-	background: rgba(0, 255, 0, .08);
+	background: rgba(0, 0, 0, .08);
 }
 
 /*	post list in pages */
@@ -155,25 +171,28 @@ article .download {
 	display: block;
 }
 .al {
-	margin: 0 0 -12px 0;
+	margin-top: 8px;
 }
 	.al li {
 		position: relative;
 		list-style: none;
 		display: inline-block;
-		margin: 0 10px 10px 0;
+		margin-top: -8px;
+		line-height: 0;
 	}
 		.al li img {
-			width: 180px;
-			height: 135px;
+			width: 160px;
+			height: 120px;
 		}
 		.al li a {
 			position: absolute;
 			top: 0;
 			left: 0;
 			padding: 10px;
-			width: 160px;
-			height: 115px;
+			width: 140px;
+			height: 100px;
+			font-size: 14px;
+			line-height: 1.5;
 			opacity: 0;
 		}
 			.al li:hover a {
@@ -201,7 +220,7 @@ article .download {
 /*image */
 .bsa_it_i {
 	display: inline-block;
-	padding-right: 10px;
+	padding-right: 15px;
 	float: left;
 }
 /*ads text title */
@@ -212,11 +231,11 @@ article .download {
 }
 /*ads text content */
 .bsa_it_d {
-	line-height: 1.6;
+	line-height: 1.5;
 }
 /*hide ads by */
 .one .bsa_it_p {
-	display:none;
+	display: none;
 }
 
 footer {
@@ -225,19 +244,19 @@ footer {
 	}
 
 header h2 {
+	-webkit-animation-delay: .4s;
+	-moz-animation-delay: .4s;
+	animation-delay: .4s;
+}
+nav h2 {
 	-webkit-animation-delay: .5s;
 	-moz-animation-delay: .5s;
 	animation-delay: .5s;
 }
-nav h2 {
+hgroup h2 {
 	-webkit-animation-delay: .6s;
 	-moz-animation-delay: .6s;
 	animation-delay: .6s;
-}
-hgroup h2 {
-	-webkit-animation-delay: .65s;
-	-moz-animation-delay: .65s;
-	animation-delay: .65s;
 }
 aside h2 {
 	-webkit-animation-delay: .7s;
@@ -252,19 +271,19 @@ footer {
 
 @-webkit-keyframes txt {
 	0% {opacity: 0;}
-	85% {opacity: 0;}
+	30% {opacity: 0;}
 	100% {opacity: 100;}
 }
 
 @-moz-keyframes txt {
 	0% {opacity: 0;}
-	85% {opacity: 0;}
+	30% {opacity: 0;}
 	100% {opacity: 100;}
 }
 
 @keyframes txt {
 	0% {opacity: 0;}
-	85% {opacity: 0;}
+	30% {opacity: 0;}
 	100% {opacity: 100;}
 }
 
@@ -291,14 +310,13 @@ footer {
 }
 
 @media print,
-		screen and (max-device-width: 480px),
-		(min-device-width: 1024px) and (max-width: 959px),
-		(max-device-width: 480px) and (orientation: landscape),
-		(min-device-width: 481px) and (max-device-width: 1024px) and (orientation: portrait) {
-	* {}
+screen and (max-device-width: 480px),
+(min-device-width: 1024px) and (max-width: 959px),
+(max-device-width: 480px) and (orientation: landscape),
+(min-device-width: 481px) and (max-device-width: 1024px) and (orientation: portrait) {
 	:root {
 		-webkit-text-size-adjust: none;
-		padding: 50px;
+		padding: 50px 15%;
 	}
 	h1 {
 		font-size: 32px;
@@ -308,7 +326,7 @@ footer {
 			left: -150px;
 			width: 200px;
 			height: 200px;
-			border: 36px rgba(0, 0, 0, .1) solid;
+			border: 36px rgba(0, 0, 0, .05) solid;
 		}
 	.bsa_it_i {
 		display: block;
@@ -323,8 +341,16 @@ footer {
 		border: none !important;
 		text-decoration: none !important;
 	}
-	h1:before {display: none;}
-	a {font-weight: bold;}
-	header, nav, aside, footer {display: none;}
-	article {text-align: justify;}
+	h1:before {
+		display: none;
+	}
+	a {
+		font-weight: bold;
+	}
+	header, nav, aside, footer {
+		display: none;
+	}
+	article {
+		text-align: justify;
+	}
 }
