--- a/css/a.css
+++ b/css/a.css
@@ -309,6 +309,12 @@ footer {
 	background: rgba(255, 255, 0, .8);
 }
 
+@media (min-width: 1600px) {
+	:root {
+		max-width: 1200px;
+	}
+}
+
 @media print,
 screen and (max-device-width: 480px),
 (min-device-width: 1024px) and (max-width: 959px),
