--- a/css/a.css
+++ b/css/a.css
@@ -47,7 +47,7 @@ a {
 	}
 
 ins {
-	color: rgba(0, 0, 0, .4);
+	color: rgba(0, 0, 0, .3);
 }
 
 del {
@@ -68,26 +68,32 @@ nav ul {
 		nav ul li:last-child {
 			margin-right: 0;
 		}
+	nav.grey a {
+		color: rgba(0, 0, 0, .5);
+	}
+		nav.grey:hover a {
+			color: #000;
+		}
 
 h1 {
 	position: relative;
 	font-weight: 100;
-	font-size: 45px;
+	font-size: 36px;
 	line-height: 1;
 }
 	h1[lang=ja] {
-		margin-left: -5px;
+		margin-left: -4px;
 	}
 	h1:before {
 		position: absolute;
-		top: 2px;
+		top: 1px;
 		left: -60px;
 		display: block;
 		content: ' ';
-		width: 30px;
-		height: 30px;
+		width: 22px;
+		height: 22px;
 		border-radius: 2000px;
-		border: 6px #000 solid;
+		border: 5px #000 solid;
 		z-index: -100;
 	}
 
@@ -326,7 +332,7 @@ screen and (max-device-width: 480px),
 		padding: 50px 15%;
 	}
 	h1 {
-		font-size: 32px;
+		font-size: 28px;
 	}
 		h1:before {
 			top: -150px;
