ADD a new post: Umbrella

--- a/css/a.css
+++ b/css/a.css
@@ -19,7 +19,7 @@
 	background: #fff;
 /*	background: #000;*/
 	font-size: 14px;
-	font-family: Georgia, 'Kozuka Mincho Pr6N', 'Hiragino Mincho Pro', serif;
+	font-family: Georgia, 'Hiragino Mincho Pro', serif;
 	line-height: 1.7;
 	max-width: 960px;
 	margin: 0 auto;
