--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,35 +9,34 @@
 -->
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 
-<link rel=alternate href={% if site.prod %}//{{ site.url }}{% endif %}/feed/ type=application/atom+xml>
-<link rel=stylesheet href={% if site.prod %}//{{ site.url }}{% endif %}{{ site.css-path }}/a.min.css>
-<link rel=dns-prefetch href={{ site.file }}>
+<link rel=alternate href=/feed/ type=application/atom+xml>
+<link rel=stylesheet href={{ site.css-path }}/a.css>
 
-<title>{% if page.title != 'Sparanoid' %}{{ site.name }} - {% endif %}{{ page.title }}</title>
+<title>{% if page.title != 'Saito' %}{{ site.name }} - {% endif %}{{ page.title }}</title>
 
-{% if page.title == 'Sparanoid' %}
+{% if page.title == 'Saito' %}
 <header>
-	<h2>Welcome to <a href={% if site.prod %}//{{ site.url }}{% endif %}/>Sparanoid</a></h2>
-	<h1 lang=ja><a href={% if site.prod %}//{{ site.url }}{% endif %}/ rel=home accesskey=x>スパラノイドにようこそ</a></h1>
+	<h2>Welcome to <a href={% if site.prod %}//{{ site.url }}{% endif %}/>X</a></h2>
+	<h1 lang=en><a href={% if site.prod %}//{{ site.url }}{% endif %}/ rel=home accesskey=x>worst coder ever</a></h1>
 </header>
 {% endif %}
 
 <nav>
-	{% if page.title == 'Sparanoid' %}
+	{% if page.title == 'Saito' %}
 		<h2>Get Started Here</h2>
 	{% else %}
-		<h2>&lt; <a href={% if site.prod %}//{{ site.url }}{% endif %}/ rel=home accesskey=x>Back to Home</a></h2>
+		<h2>&lt; <a href=/ rel=home accesskey=x>Back to Home</a></h2>
 	{% endif %}
 	<ul>
-		<li{% if page.permalink == '/work/' or page.category == 'work' %} class=current{% endif %}><a href={% if site.prod %}//{{ site.url }}{% endif %}/work/>Work ／ ワークス ／ 作品</a></li>
-		<li{% if page.permalink == '/note/' or page.category == 'note' %} class=current{% endif %}><a href={% if site.prod %}//{{ site.url }}{% endif %}/note/>Note ／ ノート ／ 筆記</a></li>
-		<li{% if page.permalink == '/about/' or page.category == 'about' %} class=current{% endif %}><a href={% if site.prod %}//{{ site.url }}{% endif %}/about/>About ／ について ／ 關於</a></li>
+		<li{% if page.permalink == '/work/' or page.category == 'work' %} class=current{% endif %}><a href=/work/>Work ／ ワークス ／ 作品</a></li>
+		<li{% if page.permalink == '/note/' or page.category == 'note' %} class=current{% endif %}><a href=/note/>Note ／ ノート ／ 筆記</a></li>
+		<li{% if page.permalink == '/about/' or page.category == 'about' %} class=current{% endif %}><a href=/about/>About ／ について ／ 關於</a></li>
 	</ul>
 </nav>
 
 {{ content }}
 
-{% if page.category == "work" or page.category == "note" %} 
+{% if page.category == "work" or page.category == "note" %}
 <nav>
 {% if page.next.url %}
 	<p><a href={% if site.prod %}//{{ site.url }}{% endif %}{{ page.next.url }}/>{{ page.next.title }}</a> |
@@ -52,13 +51,7 @@
 </nav>
 {% endif %}
 
-{% if page.title != 'Sparanoid' %}
-<aside>
-<h2><a href="http://www.yoggrt.com/">Ads by Yoggrt</a></h2>
-{% include sponsor.html %}
-</aside>
-{% endif %}
-
 <footer>
-	<p class=c><a href=http://twitter.com/{{ site.twitter }}>{{ site.name }}</a> feat. <a href=http://sparanoid.com/work/nite/>NITE</a>. (<a href=/feed/ title="Feed - Atom (The Atom Syndication Format)">Atom</a>)</p>
+	<p class=c><a href=http://twitter.com/{{ site.twitter }}>{{ site.name }}</a> feat. (<a href=/feed/ title="Feed - Atom (The Atom Syndication Format)">Atom</a>)</p>
 </footer>
+
