--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,6 @@
 <!DOCTYPE html>
-<!--
-                                    _    __
-  ___ ___  ___ ________ ____  ___  (_)__/ /
- (_-</ _ \/ _ `/ __/ _ `/ _ \/ _ \/ / _  /
-/___/ .__/\_,_/_/  \_,_/_//_/\___/_/\_,_/
-   /_/
 
--->
+<meta charset="utf-8" />
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 
 <link rel=alternate href=/feed/ type=application/atom+xml>
