fix a name error and disqus

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 	<ul>
 		<li{% if page.permalink == '/work/' or page.category == 'work' %} class=current{% endif %}><a href=/work/>Work ／ ワークス ／ 作品</a></li>
 		<li{% if page.permalink == '/note/' or page.category == 'note' %} class=current{% endif %}><a href=/note/>Note ／ ノート ／ 筆記</a></li>
-		<li{% if page.permalink == '/about/' or page.category == 'about' %} class=current{% endif %}><a href=/about/>About ／ について ／ 關於</a></li>
+		<li{% if page.permalink == '/about/' or page.category == 'about' %} class=current{% endif %}><a href=/about/>About ／ このサイトについて ／ 關於</a></li>
 	</ul>
 </nav>
 
