--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 
 <link rel=alternate href=/feed/ type=application/atom+xml>
 <link rel=stylesheet href={{ site.css-path }}/a.css>
+<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 
 <title>{% if page.title != 'Saito' %}{{ site.name }} - {% endif %}{{ page.title }}</title>
 
