--- a/css/a.css
+++ b/css/a.css
@@ -19,7 +19,7 @@
 	background: #fff;
 /*	background: #000;*/
 	font-size: 14px;
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: 'ubuntu', sans-serif;
 	line-height: 1.7;
 	max-width: 960px;
 	margin: 0 auto;
