mod color and font to fashion refactor about

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
 
 <link rel=alternate href=/feed/ type=application/atom+xml>
 <link rel=stylesheet href={{ site.css-path }}/a.css>
-<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo:regular,bold">
 
 <title>{% if page.title != 'Saito' %}{{ site.name }} - {% endif %}{{ page.title }}</title>
 
@@ -25,7 +25,7 @@
 	<ul>
 		<li{% if page.permalink == '/work/' or page.category == 'work' %} class=current{% endif %}><a href=/work/>Work ／ ワークス ／ 作品</a></li>
 		<li{% if page.permalink == '/note/' or page.category == 'note' %} class=current{% endif %}><a href=/note/>Note ／ ノート ／ 筆記</a></li>
-		<li{% if page.permalink == '/about/' or page.category == 'about' %} class=current{% endif %}><a href=/about/>About ／ このサイトについて ／ 關於</a></li>
+		<li{% if page.permalink == '/about/' or page.category == 'about' %} class=current{% endif %}><a href=/about/>About ／ について ／ 關於</a></li>
 	</ul>
 </nav>
 
