--- a/css/a.css
+++ b/css/a.css
@@ -14,12 +14,12 @@
 }
 
 :root {
-	color: #000;
+	color: #385A7A;
 /*	color: rgba(255, 255, 255, .3);*/
 	background: #fff;
 /*	background: #000;*/
 	font-size: 14px;
-	font-family: 'ubuntu', sans-serif;
+	font-family: Arvo, helvetica, arial;
 	line-height: 1.7;
 	max-width: 960px;
 	margin: 0 auto;
@@ -31,23 +31,22 @@
 }
 
 a {
-	color: #000;
-/*	color: #fff;*/
-	-webkit-transition: color .8s ease, background .8s ease, opacity .8s ease;
-	-moz-transition: color .8s ease, background .8s ease, opacity .8s ease;
-	transition: color .8s ease, background .8s ease, opacity .8s ease;
+  color: #385A7A;
+  font-weight: bold;
+  font-size: 18px;
+  -webkit-transition: color .8s ease, background .8s ease, opacity .8s ease;
+  -moz-transition: color .8s ease, background .8s ease, opacity .8s ease;
+  transition: color .8s ease, background .8s ease, opacity .8s ease;
 }
-	a:hover, .pl li a:hover {
-		color: #000;
-		border-bottom: 1px dotted rgba(0, 0, 0, .3);
-		background: rgba(255, 255, 0, .95);
-		-webkit-transition: none;
-		-moz-transition: none;
-		transition: none;
-	}
+a:hover, .pl li a:hover {
+  color: #B9DDFF;
+  -webkit-transition: color .15s linear;
+  transition: color .15s linear;
+}
 
 ins {
-	color: rgba(0, 0, 0, .3);
+	color: #385A7A;
+	font-weight: bold;
 }
 
 del {
@@ -73,30 +72,30 @@ h1 {
 	position: relative;
 	font-weight: 100;
 	font-size: 36px;
+	font-weight: bold;
 	line-height: 1;
 }
-	h1[lang=ja] {
-		margin-left: -4px;
-	}
-	h1:before {
-		position: absolute;
-		top: 1px;
-		left: -60px;
-		display: block;
-		content: ' ';
-		width: 22px;
-		height: 22px;
-		border-radius: 2000px;
-		border: 5px #000 solid;
-		z-index: -100;
-	}
+h1[lang=ja] {
+	margin-left: -4px;
+}
+h1:before {
+	position: absolute;
+	top: 1px;
+	left: -60px;
+	display: block;
+	content: ' ';
+	width: 22px;
+	height: 22px;
+	border-radius: 2000px;
+	border: 5px #000 solid;
+	z-index: -100;
+}
 
 h2, h2 a, footer, footer a,
 nav:nth-of-type(2) {
-	color: rgba(0, 0, 0, 0.3);
-	font-family: Arial, sans-serif;
+	color: #385A7A;
 	font-size: 10px;
-	font-weight: normal;
+	font-weight: bold;
 	font-style: normal;
 	text-transform: uppercase;
 }
@@ -152,7 +151,7 @@ article abbr:after {
 
 article code, article pre {
 	font-family: Monaco, Menlo, Consolas, monospace;
-	color: #b74;
+	color: #FF005E;
 }
 
 article .txt {
@@ -175,40 +174,43 @@ article .download {
 .pl li {
 	margin-bottom: 1.2em;
 }
-	.pl li a {
-		border: none;
-	}
+.pl li a {
+  border: none;
+  font-weight: bold;
+  font-size: 24px;
+  color: #FF005E;
+}
 .pl ins {
 	display: block;
 }
 .al {
 	margin-top: 8px;
 }
-	.al li {
-		position: relative;
-		list-style: none;
-		display: inline-block;
-		margin-top: -8px;
-		line-height: 0;
-	}
-		.al li img {
-			width: 160px;
-			height: 120px;
-		}
-		.al li a {
-			position: absolute;
-			top: 0;
-			left: 0;
-			padding: 10px;
-			width: 140px;
-			height: 100px;
-			font-size: 14px;
-			line-height: 1.5;
-			opacity: 0;
-		}
-			.al li:hover a {
-				opacity: 1;
-			}
+.al li {
+	position: relative;
+	list-style: none;
+	display: inline-block;
+	margin-top: -8px;
+	line-height: 0;
+}
+.al li img {
+	width: 160px;
+	height: 120px;
+}
+.al li a {
+	position: absolute;
+	top: 0;
+	left: 0;
+	padding: 10px;
+	width: 140px;
+	height: 100px;
+	font-size: 14px;
+	line-height: 1.5;
+	opacity: 0;
+}
+.al li:hover a {
+	opacity: 1;
+}
 
 .current a {
 	border-bottom: 1px dotted rgba(0, 0, 0, .3);
@@ -307,7 +309,8 @@ footer {
 }
 
 ::selection {
-	background: rgba(255, 255, 0, .8);
+  background: #FF005E;
+  color: #385A7A;
 }
 
 @media (min-width: 1600px) {
