fix a _config url bug

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 {% if page.title == 'Saito' %}
 <header>
 	<h2>Welcome to <a href={% if site.prod %}//{{ site.url }}{% endif %}/>X</a></h2>
-	<h1 lang=en><a href={% if site.prod %}//{{ site.url }}{% endif %}/ rel=home accesskey=x>worst coder ever</a></h1>
+	<h1 lang=en><a href={% if site.prod %}//{{ site.url }}{% endif %}/ rel=home accesskey=x style="font-size:36px;">worst coder ever</a></h1>
 </header>
 {% endif %}
 
