--- a/css/a.css
+++ b/css/a.css
@@ -93,7 +93,7 @@ h1:before {
 
 h2, h2 a, footer, footer a,
 nav:nth-of-type(2) {
-	color: #385A7A;
+	color: #FF005E;
 	font-size: 10px;
 	font-weight: bold;
 	font-style: normal;
