--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <meta name=viewport content="width=device-width, initial-scale=1.0">
 
 <link rel=alternate href=/feed/ type=application/atom+xml>
-<link rel=stylesheet href={{ site.css-path }}/a.css>
+<link rel=stylesheet href=/css/a.css>
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Arvo:regular,bold">
 
 <title>{% if page.title != 'Saito' %}{{ site.name }} - {% endif %}{{ page.title }}</title>
