--- a/css/a.css
+++ b/css/a.css
@@ -115,7 +115,7 @@ article {
 article h3 {
 /*	only h3, please */
 	font-size: 24px;
-	margin: 2em 0;
+	margin: 1em 0;
 }
 
 article a {
@@ -134,6 +134,7 @@ article p {
 
 article ul,
 article ol {
+	margin-left: 20px;
 	list-style: square;
 }
 	article li {
